[package]
name = "whoami"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "compression-br", "compression-gzip"] }
serde_urlencoded = "0.7"
gethostname = "1.0.2"
axum-client-ip = "1.1.3"
